fix: set correct database type for tinyint (#489)

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -271,6 +271,10 @@
     "defaultMessage": "Tap to switch between front and back camera",
     "description": "camera flip button accessibility hint"
   },
+  "6To5Jx": {
+    "defaultMessage": "Anyone can download your contact card from your profile.",
+    "description": "Description of the public contact card toggle."
+  },
   "6V9XJr": {
     "defaultMessage": "Allow Azzapp to access your photos",
     "description": "Camera authorization screen title for photos permission"
@@ -298,6 +302,10 @@
   "6tePdC": {
     "defaultMessage": "Preview",
     "description": "BlockText bottom menu label for Preview tab"
+  },
+  "6uZTai": {
+    "defaultMessage": "Your Contact Card is a convenient way to share your contact information.",
+    "description": "Description of the contact card screen."
   },
   "6x/B5C": {
     "defaultMessage": "Title size : {size}",
@@ -515,6 +523,10 @@
     "defaultMessage": "Username can’t contain space or special caracters",
     "description": "NewProfileScreen - Username Error"
   },
+  "CVzXRv": {
+    "defaultMessage": "Share",
+    "description": "Share button label"
+  },
   "CcpVyl": {
     "defaultMessage": "Share",
     "description": ""
@@ -526,6 +538,10 @@
   "CmkC/M": {
     "defaultMessage": "Slide to change the border size",
     "description": "Hint of the border size slider in carousel edition"
+  },
+  "CzmHsY": {
+    "defaultMessage": "Public contact card",
+    "description": "When true the contact card is public"
   },
   "D1GdDl": {
     "defaultMessage": "Cancel",
@@ -951,6 +967,10 @@
     "defaultMessage": "Show password",
     "description": "Password text input - show password button accessibility label"
   },
+  "OKOTHE": {
+    "defaultMessage": "Anyone can download your contact card from your profile.",
+    "description": "Description of the display on my webcard toggle."
+  },
   "OPcjcW": {
     "defaultMessage": "Tap to change the text alignment of the text",
     "description": "Hint of the text alignment button"
@@ -1006,6 +1026,10 @@
   "PnC9oY": {
     "defaultMessage": "Bottom Margin size",
     "description": "Label of the bottom margin size slider in Line Divider edition"
+  },
+  "Q0rNS5": {
+    "defaultMessage": "Edit card details",
+    "description": "Edit card details button label"
   },
   "QjKfB6": {
     "defaultMessage": "Fore.",
@@ -1335,6 +1359,10 @@
     "defaultMessage": "Images",
     "description": "Title of the images section in carousel edition"
   },
+  "YrwqNo": {
+    "defaultMessage": "Contact Card",
+    "description": "Title of the contact card screen, displayed in the header."
+  },
   "YyZiop": {
     "defaultMessage": "Cut Video",
     "description": "Title of the cut video section in Image edition wizzar"
@@ -1603,6 +1631,10 @@
     "defaultMessage": "Border radius : {size}",
     "description": "border radius message in SimpleButton edition"
   },
+  "eav1ar": {
+    "defaultMessage": "Display on my webcard",
+    "description": "When true the contact card is displayed on the webcard"
+  },
   "epg2X1": {
     "defaultMessage": "Slide to change the Font Size",
     "description": "Hint of the fontSize slider in SimpleButton edition"
@@ -1722,6 +1754,10 @@
   "hgtV7c": {
     "defaultMessage": "Invite friends via ...",
     "description": "Invite friends through other apps"
+  },
+  "hha9F6": {
+    "defaultMessage": "Add to Apple Wallet",
+    "description": "Add to Apple Wallet button label"
   },
   "hnj8Qa": {
     "defaultMessage": "Text alignment",
